# cctv-analysis

./: .gitignore  2camTracker.py  LICENSE  README.md  bash.sh  btracker.py  cctv_analysis.ipynb  demo.ipynb  demo.py  demo2.ipynb  demo3.ipynb  demo_2cam.ipynb  demo_enhance.ipynb  demo_enhancement.ipynb  demo_tracker.ipynb  env.yml  environment.yml  environment_cpu.yml  multi_camera_tracker.py  optimize_parameters.py  pyproject.toml  requirements.txt  setup.bat  setup.cfg  setup.py  setup.sh  test.ipynb  test.py  test_installation.py  test_videos.py  v0.py  v1.py  v10.py  v11.py  v12.py  v13.py  v14.py  v15.py  v2.py  v3.py  (+5 more)
config/: config.yaml
configs/: config.yaml  models.yaml
docs/: structure.md
examples/: README.md  basic_analysis.py  cctv_analysis.ipynb  example-notebook.ipynb  multi_camera_gpu.py  process-videos-notebook.ipynb
models/: README.md
scripts/: download_models.py  download_reid.py  parallel_vp.py  process_videos.py  setup_gpu.sh  verify_models.py
src/cctv_analysis/: __init__.py  _version.py  camera_processor.py  demographic_analyzer.py  demographics.py  detector.py  exporters.py  matcher.py  person_detector.py  person_tracker.py  reid.py  tracker.py  utils.py
src/cctv_analysis/utils/: __init__.py  analysis.py  config.py  config_utils.py  data_types.py  data_utils.py  gpu_check.py  logger.py  logging_utils.py  metrics.py  metrics_utils.py  models.py  types.py  video_processor.py  video_utils.py  visualization.py  visualization_utils.py
templates/: report_template.html  report_template.md
