[metadata]
name = cctv-analysis
description = Multi-camera person tracking and analysis
author = Mingyuan Chen
author_email = M.Chen2@exeter.ac.uk
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MingyuanChen94/cctv-analysis
project_urls =
    Bug Tracker = https://github.com/MingyuanChen94/cctv-analysis/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Image Recognition

[options]
package_dir =
    = src
packages = find:
python_requires = ==3.8.*
install_requires =
    torch>=2.0.0
    torchvision>=0.15.0
    numpy>=1.21.0
    opencv-python>=4.5.0
    yolox>=0.3.0
    torchreid==0.2.5  # Fixed version
    tqdm>=4.65.0
    matplotlib>=3.5.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    black>=22.0.0
    isort>=5.0.0
    jupyter>=1.0.0

[options.package_data]
cctv_analysis = py.typed

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --tb=short
